test_regress/t/t_tri_pull_bad.out
%Error: t/t_tri_pull_bad.v:10: Unsupported: Conflicting pull directions.
%Error: t/t_tri_pull_bad.v:9: ... Location of conflicting pull.
%Error: Exiting due to
